@@ -6,6 +6,7 @@ Generic changes/fixes
 		
 Device specific changes/fixes
 	* GPS-Logger2/3 - fix error for Android saved OSD files
+	* HoTTAdapter* - change log level of Sensor and block number to INFO
 
 
 Version 3.5.3 - 20 Jan 2022
